[package]
name = "webchordr-song-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libchordr = { path = "../../libchordr" }
webchordr-events = { path = "../events" }
webchordr-song-list = { path = "../song-list" }
webchordr-common = { path = "../common" }
yew = "0.20"
js-sys = "^0.3.58"
wasm-bindgen-futures = "^0.4.31"
unicode-segmentation = "1.8.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
chrono = { version = "^0.4.19", default-features = false, features = ["std", "clock"] }

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.58"
features = [
    'KeyboardEvent',
    'HtmlElement',
    'Document',
    'HtmlDocument',
    'Url',
    'DateTimeValue',
    'Window',
    'Location',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'RequestCredentials',
    'Response',
    'Storage',
    'History',
    'Navigator',
]
