[package]
name = "webchordr-song-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = "1"
serde_derive = "1"
libchordr = { path = "../../libchordr" }
webchordr-events = { path = "../events" }
webchordr-common = { path = "../common" }
yew = "0.19"
js-sys = "^0.3.58"
wasm-bindgen-futures = "^0.4.31"

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.58"
features = [
    'Headers',
    'Request',
    'RequestInit',
]
