[package]
name = "webchordr-song-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "^0.3.58"
libchordr = { path = "../../libchordr" }
log = "0.4"
serde = "1"
serde-wasm-bindgen = "^0.6.5"
serde_derive = "1"
wasm-bindgen-futures = "^0.4.31"
webchordr-common = { path = "../common" }
webchordr-events = { path = "../events" }
yew = "0.20"

[dependencies.wasm-bindgen]
version = "^0.2.81"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.58"
features = [
    'Headers',
    'Request',
    'RequestInit',
]
